Working on understanding how to use postgresql efficently
